--- a/Assignment.html
+++ b/Assignment.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Write title here.</title>
+		<title>Sunny's Attributes</title>
 		<meta charset="utf-8">
 	</head>
-	<body>
+	<body><p>
+	Sunny is the best dog I've ever owned.
+	She is <h1> BEAUTIFUL</h1>
+	She is <h3> SWEET</h3>
+	She is <h6> the goodest girl</h6></p>
 	</body>
 </html>
