--- a/Assignment.html
+++ b/Assignment.html
@@ -6,8 +6,10 @@
 	</head>
 	<body><p>
 	Sunny is the best dog I've ever owned.
-	She is <h1> BEAUTIFUL</h1>
+	<main>She is <h1> BEAUTIFUL</h1>
 	She is <h3> SWEET</h3>
-	She is <h6> the goodest girl</h6></p>
+	She is <h6> the goodest girl</h6></p></main>
+	<footer>All rights reserved to SunnyTheGoodGirl LLC.
+	<img source="C:\Users\AmberStraka\Downloads\sunny.jpg">
 	</body>
 </html>
