Added nav and embedded youtube video

--- a/Assignment.html
+++ b/Assignment.html
@@ -5,11 +5,29 @@
 		<meta charset="utf-8">
 	</head>
 	<body><p>
+	<nav>
+	<a href="Assignment.html">Home</a>
+	<a href="dog.html">Dog Picture</a>
+	<a href="https://www.youtube.com/shorts/IJArDdzqoLs">Dog Video</a>
+	</nav>
 	Sunny is the best dog I've ever owned.
 	<main>She is <h1> BEAUTIFUL</h1>
 	She is <h3> SWEET</h3>
 	She is <h6> the goodest girl</h6></p></main>
-	<footer>All rights reserved to SunnyTheGoodGirl LLC.
-	<img source="C:\Users\AmberStraka\Downloads\sunny.jpg">
+	<img src="C:\Users\AmberStraka\OneDrive - L10N People\Desktop\Website\Images\sunny.jpg">
+	<p><blockquote>A dog is man's best friend</blockquote></p>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/T0bTT1wBGvE?si=34h6IhDdOF6OwMUA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		
+			<footer>All rights reserved to SunnyTheGoodGirl LLC.
+			<a href="dog.html">Dog Image</a>
+			<a href="https://www.petsmart.com/">Pet Supplies</a>
+				<nav>
+					<a href="home page file name or URL">HOME</a>
+					<a href="about page file name or URL">ABOUT</a>
+					<a href="FAQs page file name or URL">FAQs</a>
+					<a href="contact page file name or URL">CONTACT<a/>
+				</nav>
+			</footer>
+	
 	</body>
 </html>
