Added block quote

--- a/Assignment.html
+++ b/Assignment.html
@@ -14,8 +14,8 @@
 	<main>She is <h1> BEAUTIFUL</h1>
 	She is <h3> SWEET</h3>
 	She is <h6> the goodest girl</h6></p></main>
-	<img src="C:\Users\AmberStraka\OneDrive - L10N People\Desktop\Website\Images\sunny.jpg">
-	<p><blockquote>A dog is man's best friend</blockquote></p>
+	<img width="315" height="560" src="C:\Users\AmberStraka\OneDrive - L10N People\Desktop\Website\Images\sunny.jpg">
+	<p><blockquote>"A dog is the only thing on earth that loves you more than he loves himself.” – Josh Billings</blockquote></p>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/T0bTT1wBGvE?si=34h6IhDdOF6OwMUA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		
 			<footer>All rights reserved to SunnyTheGoodGirl LLC.
