HTML basics and Web Project creation

--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -4,6 +4,6 @@
 <p><font color="purple" face="Calibri" size="3">
 And they were all <u>purple</u></font></p>
 <p><font color="#006400"><b>Dark green</b> is my favorite color</font></p>
-<p><i>Below is a picture of my dog Lincoln.</i>
-<p><img src="C:\Users\AmberStraka\OneDrive - L10N People\Desktop\Website\Images\lincoln 2.jpg" height="700" width="500" alt="Picture of Lincoln"></p>
+<p><em>Below is a picture of my dog Lincoln.</em></p>
+<a href="https://learncodinganywhere.com/" target="new">The Tech Academy</a>
 </html>
